literally everything works now on mobile:) fix: Update theme version and comment out markdown source view backdrop filter.

--- a/theme.css
+++ b/theme.css
@@ -505,7 +505,7 @@ input[type="range"]::-webkit-slider-thumb {
 
 .markdown-source-view.mod-cm6 .cm-scroller {
   background-color: var(--tr);
-  backdrop-filter: blur(var(--set-blur));
+  /*  backdrop-filter: blur(var(--set-blur)); */
 }
 
 .popover.hover-popover.is-editing {
